<resources>
    <string name="app_name">Photo Mosaic Magic</string>
    <string name="select_image">Select image</string>
    <string name="image_loaded">Image loaded</string>
    <string name="load_image">Load Image</string>
    <string name="no_image_chosen">You didn\'t choose an image…</string>
    <string name="loading_image">Loading image</string>
    <string name="image_not_loaded">Image could not be loaded.</string>
    <string name="action_settings">Settings</string>
    <string name="set_tile_height">Set the mosaic tile heigth</string>
    <string name="set_tile_width">Set the mosaic tile width</string>
    <string name="set_tile_padding">Set the mosaic tile padding</string>
    <string name="set_tile_type">Set the mosaic tile type</string>
    <string name="tile_height_summary">The height of the mosaic tiles</string>
    <string name="tile_width_summary">The width of the mosaic tiles</string>
    <string name="tile_padding_summary">The padding of the mosaic tiles</string>
    <string name="tile_type_summary">The type of the mosaic tiles</string>
    <string name="tile_height_title">Tile height</string>
    <string name="tile_width_title">Tile width</string>
    <string name="tile_padding_title">Tile padding</string>
    <string name="tile_type_title">Tile type</string>
    <string name="download">Download</string>
    <string name="load_image_first">You need to load an image first!</string>
    <string name="grant_write_permission_first">You need to grant the write external storage permission to download the image!</string>
    <string name="image_downloaded">The image has been downloaded: </string>
    <string name="menu_about">about this app</string>
    <string name="app_developed_by">App developed by Thomas Fuchs-Martin</string>
    <string name="google_play_store">GOOGLE PLAY STORE</string>
    <string name="menu_share">Share</string>
    <string name="download_app">Download Photo Mosaic Magic at Google Play:</string>
</resources>
